Sun Apr 26 18:14:28 MEST 1998 Sven Neumann <sven@gimp.org>

	* gimp_tips.txt: added yet another tip

Sun Apr 26 17:50:36 MEST 1998 Sven Neumann <sven@gimp.org>

	* updated engrave plug-in

	* updated oilify plug-in
	* changed the call to plug-in-oilify in circuit.scm and lava.scm 

Sun Apr 26 03:06:16 PDT 1998 Manish Singh <yosh@gimp.org>

	* oh goodie, the PSD plugin doesn't relay on endian junk anymore

Sun Apr 26 02:34:21 PDT 1998 Manish Singh <yosh@gimp.org>

	* updated CEL plugin

	* added PSD plugin and autoconf for byte order

Thu Apr 23 19:08:16 PDT 1998 Manish Singh <yosh@gimp.org>

	* Added sharpen to stable dist

	* updated sgi and despeckle plugins

	* plug-ins/xd/xd.c: works with xdelta 0.18. The use of xdelta
	versions prior to this is not-supported.

	* plug-in/gfig/gfig.c: spelling corrections :)

	* app/fileops.c: applied gimp-gord-980420-0, fixes stale save
	procs in the file dialog

	* app/text_tool.c: applied gimp-egger-980420-0, text tool
	optimization

Thu Apr 23 21:27:23 EDT 1998 Matthew Wilson <msw@gimp.org>

	* app/gimage.c: set srcPR2.[xy] to srcPR1.[xy] in
	gimage_construct_composite_preview (fixes hangs in preview creation)

Tue Apr 21 15:11:21 EDT 1998 Matthew Wilson <msw@gimp.org>

	* app/disp_callbacks.c: removed the tool reset when changing gdisplays
	* app/bezier_select.c: stop draw_core when changing gdisplays

Tue Apr 21 01:59:12 EDT 1998 Matthew Wilson <msw@gimp.org>

	* app/iscissors.c: Remove the iscissors outline by stopping the
	draw_core before bezierifying the selection.  There may be
	memory leaks here (the iscissors stuff does not appear to be freed
	on bezierify)

Mon Apr 20 18:15:54 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/main.c
	* app/errors.c: added --debug-handlers switch to get stack traces
	on all signals again (not all sigabrts and sigpipes are normal
	things)

	* plug-ins/animoptimize/animoptimze.c: updated

1998-04-20  Marc Ewing  <marc@redhat.com>

	* added RPM/* files and use them in gimp.spec
